# hoppy-example

./: .gitignore  README.md  clean.sh  install.sh  stack.yaml
example/: Setup.hs  hoppy-example.cabal
example-cpp/: Makefile  Setup.hs  hoppy-example-cpp.cabal
example-cpp/cpp/: gen_std.cpp  gen_utils.hpp  utils.cpp  utils.hpp
example-cpp/src/Foreign/Hoppy/Example/Internal/: EmptyCpp.hs
example-generator/: hoppy-example-generator.cabal
example-generator/src-exe/: Main.hs
example-generator/src/Foreign/Hoppy/Example/Internal/: EmptyGenerator.hs
example/src-exe/: Main.hs
example/src/Foreign/Hoppy/Example/: Std.hs
example/tests/: Main.hs
gen-cpp/: gen_utils.cpp
gen-hs/Foreign/Hoppy/Example/: Utils.hs
