name: hoppy-example-generator
version: 0.1.0
license: Apache-2.0
author: Bryan Gardiner <bog@khumba.net>
maintainer: Bryan Gardiner <bog@khumba.net>
copyright: Copyright 2015-2018 Bryan Gardiner
build-type: Simple
cabal-version: >=1.10

-- This library component is here so that the C++ and Haskell gateway packages
-- can build-depends on it.  Really, the gateway packages should setup-depends
-- on the generator, but this is a new feature in Cabal 1.24 and some distros
-- still aren't shipping it yet.
library
  hs-source-dirs: src
  other-modules:
      Foreign.Hoppy.Example.Internal.EmptyGenerator
  build-depends:
      base
  default-language: Haskell2010
  ghc-options: -W -fwarn-incomplete-patterns -fwarn-unused-do-bind

executable hoppy-example-generator
  hs-source-dirs: src-exe
  main-is: Main.hs
  build-depends:
      base
    , haskell-src
    , hoppy-generator >=0.5 && <0.6
    , hoppy-std >=0.5 && <0.6
  default-language: Haskell2010
  ghc-options: -W -fwarn-incomplete-patterns -fwarn-unused-do-bind
